--- a/MEAN/frontend/src/app/layout/home/home.component.html
+++ b/MEAN/frontend/src/app/layout/home/home.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
 
-<form class="mt-5 w-75 ml-5">
+<form class="mt-5 w-75 ml-5" *ngIf='status==true'>
+  <h1>HI User (Only For User)</h1>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Email</label>
@@ -19,8 +20,6 @@
       <input type="email" class="form-control" value="{{User.About}}" id="inputEmail4" >
     </div>
   </div>
-
   <button type="submit" class="btn btn-primary mt-1 mr-2">Update</button>
   <button type="submit" class="btn btn-primary mt-1 mr-2">delete Account</button>
-  
 </form>
