--- a/MEAN/frontend/src/app/layout/home/home.component.html
+++ b/MEAN/frontend/src/app/layout/home/home.component.html
@@ -20,6 +20,6 @@
       <input type="email" class="form-control" value="{{User.About}}" id="inputEmail4" >
     </div>
   </div>
-  <button type="submit" class="btn btn-primary mt-1 mr-2">Update</button>
-  <button type="submit" class="btn btn-primary mt-1 mr-2">delete Account</button>
+  <button type="submit" class="btn btn-primary mt-1 mr-2" (click)="Update()">Update</button>
+  <button type="submit" class="btn btn-primary mt-1 mr-2" (click)="DeleteAccoutn()" >delete Account</button>
 </form>
