Delete Account in Admin side is Done

--- a/MEAN/frontend/src/app/layout/list/list.component.html
+++ b/MEAN/frontend/src/app/layout/list/list.component.html
@@ -6,7 +6,7 @@
       <div class="card-body">
         <h5 class="card-title"><b> User Name:- </b> {{item.UserName}} </h5>
         <p class="card-text"><b>About:</b> {{item.UserAbout}}</p>
-        <a href="#" class="btn btn-primary" routerLink='../{{item.UserName}}'>More Info.</a>
+        <a href="#" class="btn btn-primary" routerLink='../{{item.UserEmail}}'>More Info.</a>
       </div>
     </div>
   </div>
