--- a/MEAN/frontend/src/app/layout/user-more/singledata/singledata.component.html
+++ b/MEAN/frontend/src/app/layout/user-more/singledata/singledata.component.html
@@ -1,1 +1,25 @@
-<p>singledata works!</p>
+
+<h3>UserName : {{UserName.id}} </h3>
+<form class="mt-5 w-75 ml-5" *ngIf='status==true'>
+  <h1>HI User (Only For User)</h1>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">Email</label>
+      <input type="email" class="form-control" value="{{User.Email}}" id="inputEmail4" >
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">Name</label>
+      <input type="text" class="form-control" value="{{User.Name}}" id="inputEmail4" >
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">About</label>
+      <input type="text" class="form-control" value="{{User.About}}" id="inputEmail4" >
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary mt-1 mr-2" (click)="Update()">Update</button>
+  <button type="submit" class="btn btn-primary mt-1 mr-2" (click)="DeleteAccoutn()" >delete Account</button>
+</form>
