--- a/MEAN/frontend/src/app/layout/user-more/singledata/singledata.component.html
+++ b/MEAN/frontend/src/app/layout/user-more/singledata/singledata.component.html
@@ -5,7 +5,7 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Email</label>
-      <input type="email" class="form-control" value="{{User.Email}}" id="inputEmail4" >
+      <input type="text" class="form-control" value="{{User.Email}}" id="inputEmail4" >
     </div>
   </div>
   <div class="form-row">
